# Lonesome-Island

./: CMakeLists.txt  README.md  makefile  settings.config
cmake/: FindSDL2_image.cmake
doc/: diagramme_grant.ods
doxygen/: lonesomeDoxyfile
doxygen/html/: annotated.html  camera_8h_source.html  classes.html  client_8c.html  client_8c__incl.map  client_8c__incl.md5  client_8c_a1a44fcc8a4125e81a0730b67c2603470_icgraph.map  client_8c_a1a44fcc8a4125e81a0730b67c2603470_icgraph.md5  client_8c_a3622090a7ff391221a74cad6493bbca9_cgraph.map  client_8c_a3622090a7ff391221a74cad6493bbca9_icgraph.md5  client_8c_a37deea5f4750c52937a56b0e97d566b9_cgraph.map  client_8c_a37deea5f4750c52937a56b0e97d566b9_cgraph.md5  client_8c_a37deea5f4750c52937a56b0e97d566b9_icgraph.dot  client_8c_a37deea5f4750c52937a56b0e97d566b9_icgraph.map  client_8c_a5db5e79b1f9efa79675000da17beacfb_cgraph.map  client_8c_a5db5e79b1f9efa79675000da17beacfb_icgraph.map  client_8c_a5e0f51fafacc388da3b4ebbf686b0eda_icgraph.dot  client_8c_a5e0f51fafacc388da3b4ebbf686b0eda_icgraph.map  client_8c_a7cea858f95329a092fd2cbc746c59728_icgraph.map  client_8c_a7cea858f95329a092fd2cbc746c59728_icgraph.md5  client_8c_ad2e9b80b5c5fa53e006e439a25c692cc_icgraph.map  client_8c_ad2e9b80b5c5fa53e006e439a25c692cc_icgraph.md5  client_8c_source.html  (+616 more)
src/: camera.c  camera.h  client.c  client.h  create_map.c  create_map.h  defs.c  defs.h  init.c  init.h  liste.c  liste.h  main.c  main.h  map.c  map.h  menus.c  menus.h  player.c  player.h  render.c  render.h  settings.c  settings.h  socket.c  socket.h  sound.c  sound.h
tests/: makefile
(+371 files in other folders)
